# generic_twitter

./: README.md  db.sqlite3  pyproject.toml
social/: admin.py  models.py  urls.py
social/migrations/: 0001_initial.py  0002_profile_date_modified.py  0003_meep.py  0004_profile_profile_image.py  0005_meep_likes.py  0006_profile_facebook_link_profile_homepage_link_and_more.py
social/templates/: home.html  navbar.html  profile.html
twitterclone/: settings.py  urls.py
